--- a/logstash.conf
+++ b/logstash.conf
@@ -13,7 +13,7 @@ filter {
 }
 output {
    elasticsearch {
-     hosts => "elasticsearch:9200"
+     hosts => "localhost:9200"
      index => "logstash-wanjiang"
      action => "index"
      workers => 1
